# AI_Health-Wellness-Agent

./: FastAPI Backen_main.py  agent.py  context.py  guardrial.py  hooks.py  main.py  planner_agent.py  pyproject.toml  streamlit_app.py
agents/: escalation_agent.py  injury_support_agent.py  nutrition_expert_agent.py
tools/: goal_analyzer.py  meal_planner.py  scheduler.py  tracker.py  workout_recommender.py
utils/: pfd.py  utils.py
